# jflex

./: .gcp.bazelrc  WORKSPACE  cloudbuild.yaml  pom.xml
benchmark/: pom.xml
java/de/jflex/ucd_generator/emitter/unicode_version/: BUILD.bazel  UnicodeVersionEmitter.java
java/de/jflex/ucd_generator/ucd/: BUILD.bazel  CaselessMatches.java  PropertyValueIntervals.java  UnicodeData.java
java/de/jflex/util/collect/: BUILD.bazel  IntSet.java
jflex/: BUILD.bazel  README.md  pom.tmpl.xml
jflex/src/main/java/jflex/chars/: Interval.java
jflex/src/main/java/jflex/generator/: BUILD.bazel
jflex/src/test/java/jflex/core/: BUILD.bazel  RegExpsTest.java
scripts/: google-cloud.build.sh
