java_test(
    name = "RegExpTest",
    srcs = ["RegExpTest.java"],
    deps = [
        "//jflex/src/main/java/jflex/core",
        "//jflex/src/main/java/jflex/core/unicode",
        "//third_party/com/google/truth",
    ],
)

java_test(
    name = "RegExpsTest",
    srcs = ["RegExpsTest.java"],
    deps = [
        "//jflex/src/main/java/jflex/chars",
        "//jflex/src/main/java/jflex/core",
        "//jflex/src/main/java/jflex/core/unicode",
    ],
)
